--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     />
   </head>
   <body>
-    <h1 class="title"><img src="./logo.png" /></h1>
+    <div class="header">
+      <p></p>
+      <h1 class="title"><img src="./logo.png" /></h1>
+      <a href="./blog/blog.html">Blog</a>
+    </div>
     <div id="show-time">0 seconds</div>
 
     <div class="box-container">
@@ -34,7 +38,7 @@
       <!-- <div id="histories"></div> -->
     </div>
     <div id="histories"></div>
-    
+
     <div id="countdown"></div>
     <div id="modal-background" class="hidden"></div>
     <div id="result" class="hidden"></div>
