--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header">
       <p></p>
       <h1 class="title"><img src="./logo.png" /></h1>
-      <a href="./blog/blog.html">Blog</a>
+      <a href="./blog.html">Blog</a>
     </div>
     <div id="show-time">0 seconds</div>
 
@@ -35,7 +35,7 @@
         <h1 class="title2">History</h1>
         <div class="line"></div>
       </div>
-      <!-- <div id="histories"></div> -->
+      
     </div>
     <div id="histories"></div>
 
